client/src/assets/css/index.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* HeaderBar */
.navbarheadwrapper {
  position: sticky;
  top: 0;
  z-index: 1;
}
.navheight {
  max-height: 100px;
}
/* HeaderBar */
/* CartCounter */
.cartcounterwrapper {
  position: relative;
  cursor: pointer;
}
.cartcounterbadge {
  position: absolute;
  top: -5px;
  right: -11px;
}
/* CartCounter */
/* CartItemList */
.cartitemlistwrapper {
  max-height: 522px;
  overflow-y: auto;
}
.cartitemsimage {
  width: 100%;
  height: 4vw;
  object-fit: contain;
}
.cartitemqntwrapper {
  display: flex;
  justify-content: space-between;
}
.cartitemtext {
  margin-bottom: 0.4rem;
}
.cartitemremoveicon {
  color: red;
  cursor: pointer;
}
/* CartItemList */

/* FooterBar */
.footerbarwrapper {
  background-color: gray;
  color: #fff;
  text-align: center;
  justify-content: center;
  padding: 10px;
  margin-top: 4rem;
}
/* FooterBar */

/* ProductCartQnt */
.productcartqntwrapper {
  display: flex;
  justify-content: space-evenly;
  width: 100px;
  align-items: center;
  margin: 0 4px 0 4px;
  border: 2px solid gray;
  background-color: antiquew;
}
/* ProductCartQnt */

/* ProductList */
.productlistcardimg {
  width: 100%;
  height: 10vw;
  object-fit: contain;
}
.productlistactionwrapper {
  display: inline-flex;
  justify-content: space-between;
  width: 100%;
  align-items: center;
}

/* ProductList */

/* ProductPagination */
.paginationfloat {
  float: right;
}
/* ProductPagination */

.centerflex {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.wd-15 {
  width: 15%;
}
.wd-60 {
  width: 60%;
}
.wd-25 {
  width: 25%;
}

